kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - catalogue.chaya-devops.fr
    - panier.chaya-devops.fr
    - paiement.chaya-devops.fr
    secretName: production-tls
  rules:
  - host: catalogue.chaya-devops.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalogue-service
            port:
              number: 80
  - host: panier.chaya-devops.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: panier-service
            port:
              number: 80
  - host: paiement.chaya-devops.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paiement-service
            port:
              number: 80
